--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "4.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react": "^16.9.48",
+    "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.1",
+    "axios": "^0.20.0",
     "bootstrap": "4.5.2",
-    "@ant-design/icons": "4.2.2",
     "jquery": "3.5.1",
     "popper": "1.0.1",
     "react": "^16.13.1",
-    "axios": "^0.20.0",
     "react-dom": "^16.13.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "react-tracked": "^1.4.1",
     "use-reducer-async": "^2.0.1"
